# NetcdfData.Microservice

./: .env  .env.dev  .env.prod  .gitignore  707ba59d-33da-402c-bddb-b70355897b83.nc  README.md  changelog.md  deploy.py  pyproject.toml  requirements.txt  test.nc  util.py
.github/workflows/: docs.yml  python-package.yml  tests.yml
app/: main.py
app/api/: models.py  netcdfs.py
app/docs/: conf.py
app/processing/: netcdfs_processing.py
docs/: __init__.py  conf.py  index.md
tests/: __init__.py  test_get_api.py  test_get_data_from_point.py  test_get_netcdf_from_point.py  test_netcdfs_processing.py
tests/data/get_data_from_point_multiple_files/: Ferrol_202301080100.nc  Ferrol_202301080200.nc  Ferrol_202301080300.nc  Ferrol_202301080400.nc  Ferrol_202301080500.nc  Ferrol_202301080600.nc  Ferrol_202301080700.nc  Ferrol_202301080800.nc  Ferrol_202301080900.nc  Ferrol_202301081000.nc  Ferrol_202301081100.nc  Ferrol_202301081200.nc  Ferrol_202301081300.nc  Ferrol_202301081400.nc  Ferrol_202301081500.nc  Ferrol_202301081600.nc  Ferrol_202301081700.nc  Ferrol_202301081800.nc  Ferrol_202301081900.nc  Ferrol_202301082000.nc  Ferrol_202301082100.nc  Ferrol_202301082200.nc  Ferrol_202301082300.nc  Ferrol_202301090000.nc  Ferrol_202301090100.nc  Ferrol_202301090200.nc  Ferrol_202301090300.nc  Ferrol_202301090400.nc  Ferrol_202301090500.nc  Ferrol_202301090600.nc  Ferrol_202301090700.nc  Ferrol_202301090800.nc  Ferrol_202301090900.nc  Ferrol_202301091000.nc  Ferrol_202301091100.nc  Ferrol_202301091200.nc  Ferrol_202301091300.nc  Ferrol_202301091400.nc  Ferrol_202301091500.nc  (+56 more)
(+5 files in other folders)
