[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "NetcdfMicroservice"
requires-python = ">=3.7"
version = "0.1.0"
description = "A microservice for netcdf files"

[project.optional-dependencies]
dev = ["flit", "black", "sphinx", "coverage[toml]", "myst-nb", "sphinx-autoapi", "sphinx_rtd_theme"]

[tool.black]
addopts = "-v"